Fixed text wrap

--- a/rising_tide/src/index.css
+++ b/rising_tide/src/index.css
@@ -18,6 +18,7 @@ body {
 p{
   font-family: var(--font);
   color: var(--color);
+  overflow-wrap: break-word;
 }
 h1{
   font-size: 32px;
